Fixed small issue in button animation

--- a/css/style.css
+++ b/css/style.css
@@ -142,7 +142,7 @@ body {
   z-index: -1;
   transition: all .4s; }
 
-.btn-white::after {
+.btn--white::after {
   background-color: #fff; }
 
 .btn:hover::after {
