--- a/sass/main.scss
+++ b/sass/main.scss
@@ -15,6 +15,7 @@ $color-primary-dark: #28b485;
 $color-grey-dark: #777;
 
 $color-white: #fff;
+$color-black: #000;
 
 /* Universal reset */
 *,
@@ -54,25 +55,25 @@ body {
     background-size: cover;
     background-position: top;
     position: relative;
-    clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%)
-}
+    clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
 
-.header__logo-box {
-    position: absolute;
-    left: 4rem;
-    top: 4rem;
-}
+    &__logo-box {
+        position: absolute;
+        left: 4rem;
+        top: 4rem;
+    }
 
-.header__logo {
-    height: 3.5rem;
-}
+    &__logo {
+        height: 3.5rem;
+    }
 
-.header__textbox {
-    position: absolute;
-    top: 40%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
+    &__textbox {
+        position: absolute;
+        top: 40%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        text-align: center;
+    }
 }
 
 .heading-primary {
@@ -80,29 +81,30 @@ body {
     text-transform: uppercase;
     backface-visibility: hidden;
     margin-bottom: 6rem;
-}
+ 
+    &--main {
+        display: block;
+        font-size: 6rem;
+        font-weight: 400;
+        letter-spacing: 3.5rem;
+        animation-name: moveInLeft;
+        animation-duration: 1s;
+        animation-timing-function: ease-out;
+    
+        /*
+        animation-delay: 3s;
+        animation-iteration-count: 2;
+        */
+    }
+    
+    &--sub {
 
-.heading-primary--main {
-    display: block;
-    font-size: 6rem;
-    font-weight: 400;
-    letter-spacing: 3.5rem;
-    animation-name: moveInLeft;
-    animation-duration: 1s;
-    animation-timing-function: ease-out;
-
-    /*
-    animation-delay: 3s;
-    animation-iteration-count: 2;
-    */
-}
-
-.heading-primary--sub {
-    display: block;
-    font-size: 2rem;
-    font-weight: 700;
-    letter-spacing: 1.75rem;
-    animation: moveInRight 1s ease-out;
+        display: block;
+        font-size: 2rem;
+        font-weight: 700;
+        letter-spacing: 1.75rem;
+        animation: moveInRight 1s ease-out;
+    }
 }
 
 @keyframes moveInLeft {
@@ -111,8 +113,9 @@ body {
         transform: translateX(-10rem);
     }
 
-    80% {
-        transform: translateX(1rem)
+    80%
+    
+    transform: translateX(1rem)
     }
 
     100% {
@@ -163,12 +166,12 @@ body {
 
 .btn:hover {
     transform: translateY(-3px);
-    box-shadow: 0 1rem 2rem rgba(0, 0, 0, .2);
+    box-shadow: 0 1rem 2rem rgba($color-black, .2);
 }
 
 .btn:active {
     transform: translateY(-1px);
-    box-shadow: 0 .5rem 2rem rgba(0, 0, 0, .2);
+    box-shadow: 0 .5rem 2rem rgba($color-black, .2);
 }
 
 .btn--white {
