--- a/sass/main.scss
+++ b/sass/main.scss
@@ -113,9 +113,8 @@ body {
         transform: translateX(-10rem);
     }
 
-    80%
-    
-    transform: translateX(1rem)
+    80% {
+        transform: translateX(1rem)
     }
 
     100% {
